--- a/src/App/View/Admin/Settings/index.html
+++ b/src/App/View/Admin/Settings/index.html
@@ -10,7 +10,7 @@
                 </div>
                 <form name="form-setings" class="form-horizontal" id="form-setings" method="post" action="{{ urlFor("intranet.settings") }}">
                     <div class="box-body">
-                        {% include "Utils/_error_success.html" with {result: result} %}
+                        {% include "Admin/Utils/_error_success.html" with {result: result} %}
                         <div class="form-group">
                             <label for="fp_key" class="col-sm-2 control-label">Website frontpage</label>
                             <div class="col-sm-10">
