--- a/src/App/View/back.html
+++ b/src/App/View/back.html
@@ -129,7 +129,7 @@
                 <strong>Copyright &copy; {{ "now" | date("Y") }} EUROPA RE. REINSURANCE FACILITY Ltd.</strong> All rights reserved.
             </div>
         </div>
-        {% include "Utils/_confirm_dialog.html" %}
+        {% include "Admin/Utils/_confirm_dialog.html" %}
         {% block js_footer %}
             <!--[if lt IE 9]>
                 <script src="/assets/vendor/html5shiv.min.js"></script>
