--- a/src/App/View/Admin/Categories/edit.html
+++ b/src/App/View/Admin/Categories/edit.html
@@ -8,11 +8,16 @@
             <div class="box box-primary">
                 <div class="box-header with-border">
                     <h3 class="box-title">Edit category &ldquo;{{ category.title }}&rdquo;</h3>
+                    <div class="box-tools">
+                        <div class="input-group input-group-sm" style="width: 150px;">
+                            <a class="btn btn-sm btn-success pull-right" href="{{ urlFor("intranet.categories.add") }}"><i class="fa fa-plus"></i> Add New Category</a>
+                        </div>
+                    </div>
                 </div>
                 <form name="form-category" id="form-category" method="post" action="{{ urlFor("intranet.categories.edit", {id: category.id}) }}">
                     <input type="hidden" name="id" value="{{ category.id }}">
                     <div class="box-body">
-                        {% include "Utils/_error_success.html" with {result: message} %}
+                        {% include "Admin/Utils/_error_success.html" with {result: message} %}
                         <div class="row">
                             <div class="col-xs-12">
                                 <div class="form-group">
@@ -29,7 +34,7 @@
                                     <select name="parent" class="form-control" id="parent">
                                         <option value="" {% if category.parent is null %}selected{% endif %}>-- None --</option>
                                         {% if parent_list is iterable and parent_list|length > 0 %}
-                                            {% import "Utils/_recursive_category_select.html" as recursive %}
+                                            {% import "Admin/Utils/_recursive_category_select.html" as recursive %}
                                             {{ recursive.recursiveCategory(parent_list, 0, category.parent, category.id) }}
                                         {% endif %}
                                     </select>
