--- a/src/App/View/Admin/Pages/add.html
+++ b/src/App/View/Admin/Pages/add.html
@@ -16,7 +16,7 @@
                 </div>
                 <form name="form-page" id="form-page" method="post" enctype="multipart/form-data" action="{{ urlFor("intranet.pages.add") }}">
                     <div class="box-body">
-                        {% include "Utils/_error_success.html" with {result: message} %}
+                        {% include "Admin/Utils/_error_success.html" with {result: message} %}
                         <div class="row">
                             <div class="col-xs-8">
                                 <div class="row">
