--- a/src/App/View/Admin/Pages/edit.html
+++ b/src/App/View/Admin/Pages/edit.html
@@ -13,12 +13,17 @@
             <div class="box box-primary">
                 <div class="box-header with-border">
                     <h3 class="box-title">Edit page with title &ldquo;{{ page.title }}&rdquo;</h3>
+                    <div class="box-tools">
+                        <div class="input-group input-group-sm">
+                            <a class="btn btn-sm btn-success pull-right" href="{{ urlFor("intranet.pages.add") }}"><i class="icon fa fa-plus"></i> Add New Page</a>
+                        </div>
+                    </div>
                 </div>
                 <form name="form-page" id="form-page" method="post" enctype="multipart/form-data" action="{{ urlFor("intranet.pages.edit", {id: page.id}) }}">
                     <input type="hidden" name="id" value="{{ page.id }}">
                     <input type="hidden" name="old-file" value="{{ page.featured_photo }}">
                     <div class="box-body">
-                        {% include "Utils/_error_success.html" with {result: message} %}
+                        {% include "Admin/Utils/_error_success.html" with {result: message} %}
                         <div class="row">
                             <div class="col-xs-8">
                                 <div class="row">
@@ -96,7 +101,7 @@
                     </div>
                     <div class="box-footer">
                         <button type="submit" class="btn btn-primary"><i class="fa fa-floppy-o"></i> Save post</button>
-                        <a class="btn btn-default" href="{{ urlFor("intranet.pages.list", {page: 1}) }}"><i class="fa fa-level-up"></i> Go to posts</a>
+                        <a class="btn btn-default" href="{{ urlFor("intranet.pages.list", {page: 1}) }}"><i class="fa fa-level-up"></i> Go to pages</a>
                     </div>
                 </form>
             </div>
