--- a/src/App/View/Admin/Posts/edit.html
+++ b/src/App/View/Admin/Posts/edit.html
@@ -15,12 +15,17 @@
             <div class="box box-primary">
                 <div class="box-header with-border">
                     <h3 class="box-title">Edit post with title &ldquo;{{ post.title }}&rdquo;</h3>
+                    <div class="box-tools">
+                        <div class="input-group input-group-sm">
+                            <a class="btn btn-sm btn-success pull-right" href="{{ urlFor("intranet.posts.add") }}"><i class="icon fa fa-plus"></i> Add New Post</a>
+                        </div>
+                    </div>
                 </div>
                 <form name="form-post" id="form-post" method="post" enctype="multipart/form-data" action="{{ urlFor("intranet.posts.edit", {id: post.id}) }}">
                     <input type="hidden" name="id" value="{{ post.id }}">
                     <input type="hidden" name="old-file" value="{{ post.featured_photo }}">
                     <div class="box-body">
-                        {% include "Utils/_error_success.html" with {result: message} %}
+                        {% include "Admin/Utils/_error_success.html" with {result: message} %}
                         <div class="row">
                             <div class="col-xs-8">
                                 <div class="row">
@@ -86,7 +91,7 @@
                                         <div class="form-group">
                                             <label for="categories">Post Category <span class="required">*</span></label>
                                             {% if categories is iterable and categories|length > 0 %}
-                                                {% import "Utils/_categories_posts.html" as recursive %}
+                                                {% import "Admin/Utils/_categories_posts.html" as recursive %}
                                                 {{ recursive.printCategory(categories, 0, post.category) }}
                                             {% endif %}
                                         </div>
