--- a/src/App/View/Admin/Slides/add.html
+++ b/src/App/View/Admin/Slides/add.html
@@ -21,7 +21,7 @@
 			        <input type="hidden" id="w" name="w">
 			        <input type="hidden" id="h" name="h">
                     <div class="box-body">
-                        {% include "Utils/_error_success.html" with {result: message} %}
+                        {% include "Admin/Utils/_error_success.html" with {result: message} %}
                         <div class="row">
                             <div class="col-xs-4">
                                 <div class="form-group">
