--- a/src/App/View/Admin/Slides/edit.html
+++ b/src/App/View/Admin/Slides/edit.html
@@ -14,6 +14,11 @@
             <div class="box box-primary">
                 <div class="box-header with-border">
                     <h3 class="box-title">Edit slide with title &ldquo;{{ slide.title }}&rdquo;</h3>
+                    <div class="box-tools">
+                        <div class="input-group input-group-sm">
+                            <a class="btn btn-sm btn-success pull-right" href="{{ urlFor("intranet.slides.add") }}"><i class="icon fa fa-plus"></i> Add New Slide</a>
+                        </div>
+                    </div>
                 </div>
                 <form name="form-slide" id="form-slide" method="post" enctype="multipart/form-data" action="{{ urlFor("intranet.slides.edit", {id: slide.id}) }}">
                     <input type="hidden" name="id" value="{{ slide.id }}">
@@ -23,7 +28,7 @@
 			        <input type="hidden" id="w" name="w">
 			        <input type="hidden" id="h" name="h">
                     <div class="box-body">
-                        {% include "Utils/_error_success.html" with {result: message} %}
+                        {% include "Admin/Utils/_error_success.html" with {result: message} %}
                         <div class="row">
                             <div class="col-xs-4">
                                 <div class="form-group">
