--- a/src/App/View/Admin/Users/add.html
+++ b/src/App/View/Admin/Users/add.html
@@ -10,7 +10,7 @@
                 </div>
                 <form name="form-user" id="form-user" method="post" action="{{ urlFor("intranet.users.add") }}">
                     <div class="box-body">
-                        {% include "Utils/_error_success.html" with {result: message} %}
+                        {% include "Admin/Utils/_error_success.html" with {result: message} %}
                         <div class="row">
                             <div class="col-xs-6">
                                 <div class="form-group">
