--- a/src/App/View/Content/post.html
+++ b/src/App/View/Content/post.html
@@ -17,6 +17,9 @@
     <meta property="fb:app_id" content="{{ getSetting("fb_app_id") }}">
 {% endblock %}
 {% block content %}
+    <div id="page-header">
+        <h1 id="page-title">{{ title }}</h1>
+    </div>
     <div id="main" class="post-single three-fourths">
         <div class="post clearfix">
             {% if featured_photo %}
@@ -25,7 +28,6 @@
                 </div>
             {% endif %}
             <div class="post-body">
-                <h2 class="post-title">{{ title }}</h2>
                 {% if date %}
                     <div class="post-date">
                         <span>{{ date | date("M jS, Y") }}</span>
