--- a/src/App/View/front.html
+++ b/src/App/View/front.html
@@ -67,7 +67,7 @@
                                 <div class="social">
                                     <ul>
                                         <li class="facebook"><a href="{{ getSetting("fb") }}" title="Facebook" target="_blank">Facebook</a></li>
-                                        <li class="linkedin"><a href="{{ getSetting("in") }}" title="LinkedIn" target="_blank">LinkedIn</a></li>
+                                        <!--li class="linkedin"><a href="{{ getSetting("in") }}" title="LinkedIn" target="_blank">LinkedIn</a></li-->
                                         <li class="rss"><a href="/rss" title="Rss">Rss</a></li>
                                     </ul>
                                 </div>
