--- a/src/App/View/Admin/Slides/add.html
+++ b/src/App/View/Admin/Slides/add.html
@@ -27,6 +27,7 @@
                                 <div class="form-group">
                                     <label for="title">Title <span class="required">*</span></label>
                                     <input type="text" name="title" class="form-control" id="title" value="{{ slide.title }}">
+                                    <p class="help-block">Use * for slide without title and description</p>
                                 </div>
                             </div>
                             <div class="col-xs-5">
