41. Slide link added

--- a/src/App/View/Admin/Slides/add.html
+++ b/src/App/View/Admin/Slides/add.html
@@ -47,6 +47,15 @@
                             </div>
                         </div>
                         <div class="row">
+                            <div class="col-xs-6">
+                                <div class="form-group">
+                                    <label for="url">Link</label>
+                                    <input type="text" name="url" class="form-control" id="url" value="{{ slide.url }}">
+                                    <p class="help-block">External links ex: http://example.com; Internal links ex: /about-us</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
                             <div class="col-xs-12">
                                 <div class="form-group">
                                     <label for="featured_photo">Slide <span class="required">*</span></label>
