--- a/src/App/View/Admin/Index/dashboard.html
+++ b/src/App/View/Admin/Index/dashboard.html
@@ -26,7 +26,7 @@
                 <div class="icon">
                     <i class="fa fa-file-o"></i>
                 </div>
-                <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="{{ urlFor("intranet.pages.list", {page: 1}) }}" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
         <div class="col-lg-3 col-xs-6">
@@ -38,7 +38,7 @@
                 <div class="icon">
                     <i class="fa fa-tags"></i>
                 </div>
-                <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="{{ urlFor("intranet.categories.list") }}" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
         <div class="col-lg-3 col-xs-6">
@@ -50,7 +50,7 @@
                 <div class="icon">
                     <i class="fa fa-files-o"></i>
                 </div>
-                <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
+                <a href="{{ urlFor("intranet.posts.list", {page: 1}) }}" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
     </div>
