--- a/src/App/View/Content/post.html
+++ b/src/App/View/Content/post.html
@@ -18,7 +18,8 @@
 {% endblock %}
 {% block content %}
     <div id="page-header">
-        <h1 id="page-title">{{ title }}</h1>
+        <!--h1 id="page-title">{{ title }}</h1-->
+        <h2 class="post-title"><div class="three-fourths">{{ title }}</div></h2>
     </div>
     <div id="main" class="post-single three-fourths">
         <div class="post clearfix">
@@ -28,6 +29,7 @@
                 </div>
             {% endif %}
             <div class="post-body">
+                <!--h2 class="post-title">{{ title }}</h2-->
                 {% if date %}
                     <div class="post-date">
                         <span>{{ date | date("M jS, Y") }}</span>
