--- a/src/App/View/front.html
+++ b/src/App/View/front.html
@@ -93,7 +93,7 @@
                 <div class="container">
                     <div id="footer-bottom">
                         <div class="one-half">
-                            <p>&copy; {{ "now" | date("Y") }} EUROPA RE. REINSURANCE FACILITY Ltd</p>
+                            <p>&copy; {{ "now" | date("Y") }} EUROPA REINSURANCE FACILITY Ltd</p>
                         </div>
                         <div class="one-half column-last">
                             {% include "Utils/_footer_menu.html" %}
