--- a/src/App/View/Utils/_sidebar.html
+++ b/src/App/View/Utils/_sidebar.html
@@ -9,14 +9,14 @@
     </div>
     <div class="widget">
         {% import "Utils/_latest_news.html" as latest %}
-        {{ latest.latestNews("Latest News", 44, 4) }}
+        {{ latest.latestNews("Latest News", 44, 2) }}
     </div>
     <!--div class="widget">
         {% import "Utils/_latest_news.html" as latest %}
         {{ latest.latestNews("Europa Re in the news", 45, 4) }}
     </div-->
-    <div class="widget">
+    <!--div class="widget">
         {% import "Utils/_latest_news.html" as latest %}
         {{ latest.latestNews("Conferences and Events", 69, 4) }}
-    </div>
+    </div-->
 {% endspaceless %}
