--- a/src/App/View/Content/post.html
+++ b/src/App/View/Content/post.html
@@ -50,5 +50,6 @@
     {{ parent() }}
     <!-- Begin JS -->
     <script type="text/javascript" src="/assets/vendor/jquery-fancybox/jquery-fancybox.min.js"></script>
+    <script type="text/javascript" src="/assets/vendor/jquery-shorten/jquery-shorten.js"></script>
     <!-- End JS -->
 {% endblock %}
