--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -113,6 +113,11 @@ p {margin-bottom: 20px;}
 .promobox p {margin-bottom: 0; margin-top: 20px;}
 .promobox h2 + p, .promobox p:first-child {margin: 0;}
 h1#page-title {padding: 0 0 10px 0; border-bottom: 1px solid #e5e5e5;}
+h2 > a {
+    text-decoration: none;
+    color: #383838;
+}
+h2 > a:hover {color: #CA5728;}
 
 
 ul#search-results li {border-top: 1px dotted #ccc; padding: 20px 0;}
@@ -147,7 +152,7 @@ h2 span.more a {font-style: italic;}
 .post-list .post:first-child {border: none; padding: 0;}
 .post-list-home {padding-top: 15px; border-top: 1px solid #e5e5e5;}
 .post-list-home .post {margin-bottom: 0px;}
-a.morelink {color: #383838; font-weight: bold;}
+a.morelink {color: #383838; font-style: italic;}
 a.morelink:hover {color: #CA5728;}
 
 .content-form p {margin-bottom: 10px;}
